Fix. remove gap from coursefaq

--- a/src/styles/courseFAQ.module.scss
+++ b/src/styles/courseFAQ.module.scss
@@ -11,7 +11,7 @@
 	border-radius: 0.25em;
 	margin-bottom: 0.75em;
 	padding: 1.5em;
-	background: theme('backgroundColor.tertiary');
+	background: #8fd2fc;
 	transition: width 0.05s ease-out;
 	margin-bottom: 2rem;
 
@@ -90,10 +90,11 @@
 		flex-direction: row;
 		padding: 0 1.25em;
 		margin: 0 1.5em auto;
+		gap: 0;
 	}
 
 	.faqcard {
-		width: 33%;
+		width: 33.33%;
 		height: 548px;
 
 		&:first-of-type {
@@ -130,6 +131,7 @@
 		&.active {
 			width: 60rem;
 			background: theme('backgroundColor.tertiary');
+			box-shadow: 0px 0px 22px 8px rgba(13, 135, 212, 0.53);
 
 			.question {
 				flex-direction: row;
